# Claude-Code-Game-Master

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_game.md  CODEX_MIGRATION_AUDIT.md  DICE_ROLL_VERIFICATION.md  E2E_TEST_RESULTS.md  GRAPH-MIGRATION-PLAN.md  INVENTORY_VERIFICATION.md  README.md  README.ru.md  TODO.md  dashboard.sh  map.sh  pyproject.toml  test_dice_roll_structure.py  test_e2e_basic.py  test_e2e_dice_roll.py  test_e2e_inventory.py  test_e2e_websocket.py  update_plan.py  webui.sh
.claude/: settings.json
.planning/: TODO-web-client.md
backend/: __init__.py  auth.py  campaign_api.py  campaign_views.py  chat_history.py  cinematic_mcp.py  claude_dm.py  config.py  event_log.py  game_session.py  game_state.py  live_broker.py  map_view.py  media.py  server.py  tools_registry.py  wizard_mcp.py  wizard_mcp_stdio.py  wizard_prompt.py  wizard_session.py
docs/: architecture.ru.md  module-development.md  python-modules-api.md  schema-reference.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
lib/: agent_extractor.py  calendar.py  campaign_context.py  campaign_manager.py  campaign_mode.py  campaign_schema.py  colors.py  combat_resolver.py  combat_rules.py  consequence_manager.py  content_extractor.py  currency.py  dice.py  encounter_engine.py  encounter_manager.py  entity_enhancer.py  inventory_manager.py  json_ops.py  legacy_migration.py  location_manager.py  map_gui.py  map_renderer.py  module_data.py  module_loader.py  note_manager.py  npc_manager.py  path_manager.py  path_split.py  pathfinding.py  player_manager.py  plot_manager.py  scene_manager.py  search.py  session_manager.py  time_manager.py  validators.py  wiki_manager.py  world_graph.py  world_repository.py  world_stats.py
tests/: conftest.py  test_campaign_api.py  test_campaign_context.py  test_campaign_mode.py  test_campaign_views.py  test_chat_history.py  test_claude_dm.py  test_cli_wrappers.py  test_codex_cli_provider.py  test_config_security.py  test_dice_combat.py  test_encounter_engine.py  test_event_log.py  test_game_session.py  test_game_state.py  test_json_ops.py  test_legacy_migration.py  test_live_broker.py  test_map_view.py  test_media.py  test_middleware_contract.py  test_module_loader.py  test_player_manager.py  test_quote_extractor.py  test_runtime_registry.py  test_runtime_session_store.py  test_save_character.py  test_scene_manager.py  test_server_import.py  test_session_manager.py  test_tick_engine.py  test_wizard.py  test_world_graph.py  test_world_repository.py  test_ws_game_protocol.py
tools/: common.sh  dm-campaign.sh  dm-combat.sh  dm-condition.sh  dm-consequence.sh  dm-encounter.sh  dm-extract.sh  dm-inventory.sh  dm-location.sh  dm-migrate-campaigns.sh  dm-migrate-worldgraph.sh  dm-mode.sh  dm-module.sh  dm-note.sh  dm-npc.sh  dm-overview.sh  dm-player.sh  dm-plot.sh  dm-reset.sh  dm-roll.sh  dm-scene.sh  dm-search.sh  dm-session.sh  dm-status.sh  dm-time.sh  dm-wiki.sh  dm-world.sh
(+284 files in other folders)
